traces/bug_192.txt
#192
kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:6611: error: Dead Store
  The value written to `&opaque` (type `unsigned int`) is never used.

kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:6611:24: Write of unused value
6609.             "Failed to open DCP consumer connection!");
6610.     add_stream_for_consumer(
6611.             h, cookie, opaque++, Vbid(0), 0, cb::mcbp::Status::Success);
                             ^
6612. 
6613.     std::string opaqueStr("eq_dcpq:" + name + ":stream_0_opaque");
